---
source: crates/ruff/src/rules/flake8_async/mod.rs
---
ASYNC101.py:7:5: ASYNC101 Async functions should not call `open`, `time.sleep`, or `subprocess` methods
  |
7 | async def foo():
8 |     open("foo")
  |     ^^^^ ASYNC101
  |

ASYNC101.py:11:5: ASYNC101 Async functions should not call `open`, `time.sleep`, or `subprocess` methods
   |
11 | async def foo():
12 |     time.sleep(1)
   |     ^^^^^^^^^^ ASYNC101
   |

ASYNC101.py:15:5: ASYNC101 Async functions should not call `open`, `time.sleep`, or `subprocess` methods
   |
15 | async def foo():
16 |     subprocess.run("foo")
   |     ^^^^^^^^^^^^^^ ASYNC101
   |

ASYNC101.py:19:5: ASYNC101 Async functions should not call `open`, `time.sleep`, or `subprocess` methods
   |
19 | async def foo():
20 |     subprocess.call("foo")
   |     ^^^^^^^^^^^^^^^ ASYNC101
   |

ASYNC101.py:27:5: ASYNC101 Async functions should not call `open`, `time.sleep`, or `subprocess` methods
   |
27 | async def foo():
28 |     os.wait4(10)
   |     ^^^^^^^^ ASYNC101
   |

ASYNC101.py:31:5: ASYNC101 Async functions should not call `open`, `time.sleep`, or `subprocess` methods
   |
31 | async def foo():
32 |     os.wait(12)
   |     ^^^^^^^ ASYNC101
   |


